Made basic interactivity - Exercise 1

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                         <span class="leaderboard__label--stats leaderboard__stats--wins">Wins</span>
                         <span class="leaderboard__label--stats leaderboard__stats--losses">Losses</span>
                     </div>
-                    <ol class="leaderboard__list">
+                    <ol class="leaderboard__list" data-leaderboard-list>
                         <li class="is-in-lead">
                             <span class="leaderboard__name">John</span>
                             <span class="leaderboard__stats leaderboard__stats--wins">10</span>
